--- a/.drone.yml
+++ b/.drone.yml
@@ -1,16 +1,12 @@
-image: bjodah/dockerfile-bjodah-scicomp:14.04a
+image: bjodah/dockerfile-bjodah-scicomp:14.04c
 git:
     path: github.com/bjodah/pygslodeiv2
 script:
   - if [[ "$DRONE_BRANCH" =~ ^v[0-9]+.[0-9]?* ]]; then export PYGSLODEIV2_RELEASE_VERSION=$DRONE_BRANCH; echo ${PYGSLODEIV2_RELEASE_VERSION} | tail -c +2 > __conda_version__.txt; fi
-  - python2 setup.py build_ext --inplace
-  - python3 setup.py build_ext --inplace
-  - PYTHONPATH=$(pwd) python2 -m pytest
-  - PYTHONPATH=$(pwd) python3 -m pytest
+  - PYTHONPATH=$(pwd) ./scripts/run_tests.sh pygslodeiv2
   - python2 setup.py sdist
   - ./scripts/generate_docs.sh
-  - tar cjf doc.tar.bz2 doc/
-  - scp doc.tar.bz2 dist/* pygslodeiv2@hera.physchem.kth.se:~/
+  - scp -r doc/_build/html/ dist/* htmlcov/ pygslodeiv2@hera.physchem.kth.se:~/public_html/
   - touch doc/_build/html/.nojekyll
   - git config --global user.name "drone"
   - git config --global user.email "drone@hera.physchem.kth.se"
