--- a/.drone.yml
+++ b/.drone.yml
@@ -3,7 +3,7 @@ git:
     path: github.com/bjodah/pygslodeiv2
 script:
   - if [[ "$DRONE_BRANCH" =~ ^v[0-9]+.[0-9]?* ]]; then export PYGSLODEIV2_RELEASE_VERSION=$DRONE_BRANCH; echo ${PYGSLODEIV2_RELEASE_VERSION} | tail -c +2 > __conda_version__.txt; fi
-  - PYTHONPATH=$(pwd) ./scripts/run_tests.sh pygslodeiv2
+  - PYTHONPATH=$(pwd) ./scripts/run_tests.sh --cov pygslodeiv2 --cov-report html
   - python2 setup.py sdist
   - ./scripts/generate_docs.sh
   - scp -r doc/_build/html/ dist/* htmlcov/ pygslodeiv2@hera.physchem.kth.se:~/public_html/
