--- a/.drone.yml
+++ b/.drone.yml
@@ -1,12 +1,18 @@
 image: bjodah/dockerfile-bjodah-scicomp:14.04c
 git:
     path: github.com/bjodah/pygslodeiv2
+env:
+  - MY_SERVER=pygslodeiv2@hera.physchem.kth.se
 script:
   - if [[ "$DRONE_BRANCH" =~ ^v[0-9]+.[0-9]?* ]]; then export PYGSLODEIV2_RELEASE_VERSION=$DRONE_BRANCH; echo ${PYGSLODEIV2_RELEASE_VERSION} | tail -c +2 > __conda_version__.txt; fi
+  - python3.4 setup.py build_ext -i
+  - python2.7 setup.py build_ext -i
   - PYTHONPATH=$(pwd) ./scripts/run_tests.sh --cov pygslodeiv2 --cov-report html
-  - python2 setup.py sdist
+  - python3.4 setup.py sdist
+  - python2.7 setup.py sdist
   - ./scripts/generate_docs.sh
-  - scp -r doc/_build/html/ dist/* htmlcov/ pygslodeiv2@hera.physchem.kth.se:~/public_html/
+  - ./scripts/coverage_badge.py htmlcov/ htmlcov/coverage.svg
+  - ssh "${MY_SERVER}" "mkdir -p ~/public_html/$DRONE_BRANCH" && scp -r doc/ dist/* htmlcov/ ${MY_SERVER}:~/public_html/$DRONE_BRANCH
   - touch doc/_build/html/.nojekyll
   - git config --global user.name "drone"
   - git config --global user.email "drone@hera.physchem.kth.se"
