Updated README, setup, CI & build scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,10 @@ pep8ignore =
 flakes-ignore =
     __init__.py UnusedImport
     doc/conf.py ALL
+
+[upload_sphinx]
+upload-dir = doc/_build/html
+
+# https://github.com/pytest-dev/pytest/issues/1445
+[easy_install]
+zip_ok = 0
