Refactored C++ and Python bindings.
- get StepType from callback instead of from stack array
- Move include/ (allows pip install from git-archive zip)
- Bump CI image
- Add documentation dependencies
- Add pygslodeiv2.get_include() and tests thereof
- Update MANIFEST.in wrt new location of include
- Drop unused cimport
- Use anyode.hpp
- Add test of simple_adaptive directly from Cython
- Use simple_ functions in _numpy based wrapper
- Include package data
- Fixes and tweaks to setup.py

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 build/
 dist/
 cython_debug/
-pygslodeiv2/_gslodeiv2_numpy.cpp
+pygslodeiv2/_gsl_odeiv2_numpy.c*
 MANIFEST
 .cache/
-pygslodeiv2/_gslodeiv2_numpy.c
 doc/
 **/.ipynb_checkpoints/
 **.egg-info
+tests/test_gsl_odeiv2_cxx
+tests/catch.hpp
