Drop old cython generated source

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ tests/test_gsl_odeiv2_anyode
 tests/test_gsl_odeiv2_cxx
 tests/catch.hpp
 tests/test_gsl_odeiv2_anyode_parallel
+tests/_gsl_odeiv2_anyode.cpp
