--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ tests/test_gsl_odeiv2_cxx
 tests/catch.hpp
 tests/test_gsl_odeiv2_anyode_parallel
 tests/_gsl_odeiv2_anyode.cpp
+tests/test_gsl_odeiv2_anyode_autorestart
