--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pygslodeiv2" %}
-{% set version = "0.8.0+git" %}
+{% set version = "0.9.0+git" %}
 
 package:
   name: {{ name|lower }}
@@ -10,17 +10,22 @@ source:
 
 build:
   number: 0
+  skip: True  # [win]
+  skip: True  # [osx and py27]
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
+    - toolchain
     - python
     - setuptools
-    - numpy
+    - pip
+    - numpy 1.11.*
     - gsl
     - cython
   run:
     - python
-    - numpy
+    - numpy >=1.11
     - gsl
 
 test:
