--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,8 @@
 build:
   image: bjodah/bjodahimg18dev:v1.2
+  environment:
+    - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-6.0/bin/llvm-symbolizer
+    - ASAN_OPTIONS=symbolize=1
   commands:
     - bash -c '[[ $(python setup.py --version) =~ ^[0-9]+.* ]]'
     - ./scripts/ci.sh pygslodeiv2
