--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ build:
     - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-6.0/bin/llvm-symbolizer
     - ASAN_OPTIONS=symbolize=1
   commands:
-    - bash -c '[[ $(python setup.py --version) =~ ^[0-9]+.* ]]'
+    - bash -c '[[ $(python3 setup.py --version) =~ ^[0-9]+.* ]]'
     - ./scripts/ci.sh pygslodeiv2
     - (cd examples/; ipython3 nbconvert --to=html --ExecutePreprocessor.enabled=True --ExecutePreprocessor.timeout=300 *.ipynb)
     - (cd examples/; ../scripts/render_index.sh *.html)
