--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,4 +12,4 @@ jobs:
       - run: conda install conda-build
       - run: conda config --add channels conda-forge
       - run: conda config --set show_channel_urls true
-      - run: conda build conda-recipe
+      - run: conda build --python 3.6 conda-recipe
