--- a/.travis.yml
+++ b/.travis.yml
@@ -28,14 +28,13 @@ install:
       conda config --set always_yes yes
       conda update python
       conda install conda-build
-      conda install conda-build
       conda config --remove channels defaults
       conda config --add channels defaults
       conda config --add channels conda-forge
       conda config --set show_channel_urls true
 
 script:
-    - conda build conda-recipe
+    - conda build --python 3.6 conda-recipe
 
 notifications:
   email: false
