Skip windows for now
Even though gsl.lib contains the neccesary symbols (objdump /EXPORTS says so) compilation fails:

    C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN\link.exe /nologo /INCREMENTAL:NO /LTCG /DLL /MANIFEST:EMBED,ID=2 /MANIFESTUAC:NO /LIBPATH:C:\Miniconda35\conda-bld\pygslodeiv2_1531950995575\_h_env\libs /LIBPATH:C:\Miniconda35\conda-bld\pygslodeiv2_1531950995575\_h_env\PCbuild\win32 /LIBPATH:C:\Miniconda35\conda-bld\pygslodeiv2_1531950995575\_h_env\Library\lib "/LIBPATH:C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\LIB" "/LIBPATH:C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\ATLMFC\LIB" "/LIBPATH:C:\Program Files (x86)\Windows Kits\10\lib\10.0.14393.0\ucrt\x86" "/LIBPATH:C:\Program Files (x86)\Windows Kits\NETFXSDK\4.6.1\lib\um\x86" "/LIBPATH:C:\Program Files (x86)\Windows Kits\10\lib\10.0.14393.0\um\x86" gsl.lib gslcblas.lib /EXPORT:PyInit__gsl_odeiv2 build\temp.win32-3.5\Release\pygslodeiv2\_gsl_odeiv2.obj /OUT:build\lib.win32-3.5\pygslodeiv2\_gsl_odeiv2.cp35-win32.pyd /IMPLIB:build\temp.win32-3.5\Release\pygslodeiv2\_gsl_odeiv2.cp35-win32.lib
    Creating library build\temp.win32-3.5\Release\pygslodeiv2\_gsl_odeiv2.cp35-win32.lib and object build\temp.win32-3.5\Release\pygslodeiv2\_gsl_odeiv2.cp35-win32.exp
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_msbdf
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_msadams
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_rk8pd
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_rk1imp
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_rk4imp
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_rk2imp
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_rk4
    _gsl_odeiv2.obj : error LNK2001: unresolved external symbol _gsl_odeiv2_step_rkf45
    _gsl_odeiv2.obj : e

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   number: 200
-  skip: true  # [win and not py>=35]
+  skip: true  # [win]
   skip: true  # [osx and py27]
   features:
     - blas_{{ variant }}  # [not win]
