--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -11,11 +11,10 @@ source:
 
 build:
   number: 200
-  skip: True  # [win]
-  skip: True  # [osx and py27]
+  skip: true  # [win]
+  skip: true  # [osx and py27]
   features:
     - blas_{{ variant }}  # [not win]
-  script: PYGSLODEIV2_BLAS=openblas python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
