--- a/.drone.yml
+++ b/.drone.yml
@@ -5,9 +5,9 @@ clone:
     external/anyode: git://github.com/bjodah/anyode.git
 
 build:
-  image: bjodah/bjodahimg18dev:v1.2
+  image: bjodah/bjodahimg18dev:v4.0.1
   environment:
-    - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-6.0/bin/llvm-symbolizer
+    - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-8/bin/llvm-symbolizer
     - ASAN_OPTIONS=symbolize=1
   commands:
     - bash -c '[[ $(python3 setup.py --version) =~ ^[0-9]+.* ]]'
