--- a/.drone.yml
+++ b/.drone.yml
@@ -5,18 +5,18 @@ clone:
     external/anyode: git://github.com/bjodah/anyode.git
 
 build:
-  image: bjodah/bjodahimg18dev:v4.0.1
+  image: bjodah/bjodahimg20dev:v1.0.2
   environment:
-    - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-8/bin/llvm-symbolizer
+    - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-10/bin/llvm-symbolizer
     - ASAN_OPTIONS=symbolize=1
   commands:
     - bash -c '[[ $(python3 setup.py --version) =~ ^[0-9]+.* ]]'
+    - strip --remove-section=.note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5  # stackoverflow.com/questions/54582864/
     - ./scripts/ci.sh pygslodeiv2
-    - (cd examples/; ipython3 nbconvert --to=html --ExecutePreprocessor.enabled=True --ExecutePreprocessor.timeout=300 *.ipynb)
+    - ./scripts/render_notebooks.sh examples/
     - (cd examples/; ../scripts/render_index.sh *.html)
     - ./scripts/generate_docs.sh
     - ./scripts/prepare_deploy.sh
-    - PATH=/opt/miniconda3/bin:$PATH conda build conda-recipe
     - if grep "DO-NOT-MERGE!" -R . --exclude ".drone.yml"; then exit 1; fi
 
 deploy:
