--- a/.drone.yml
+++ b/.drone.yml
@@ -5,13 +5,14 @@ clone:
     external/anyode: git://github.com/bjodah/anyode.git
 
 build:
-  image: bjodah/bjodahimg20dev:v1.0.2
+  image: bjodah/bjodahimg20dev:v1.1.0
   environment:
+    - CC=gcc-10
+    - CXX=g++-10
     - ASAN_SYMBOLIZER_PATH=/usr/lib/llvm-10/bin/llvm-symbolizer
     - ASAN_OPTIONS=symbolize=1
   commands:
     - bash -c '[[ $(python3 setup.py --version) =~ ^[0-9]+.* ]]'
-    - strip --remove-section=.note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5  # stackoverflow.com/questions/54582864/
     - ./scripts/ci.sh pygslodeiv2
     - ./scripts/render_notebooks.sh examples/
     - (cd examples/; ../scripts/render_index.sh *.html)
