--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@ doc/
 **.egg-info
 tests/test_gsl_odeiv2_anyode
 tests/test_gsl_odeiv2_cxx
-tests/catch.hpp
+tests/doctest.h
 tests/test_gsl_odeiv2_anyode_parallel
 tests/_gsl_odeiv2_anyode.cpp
 tests/test_gsl_odeiv2_anyode_autorestart
 tmp/
+.coverage
+examples/index.html
+examples/thumbs/
