--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,5 @@
 CXX ?= g++
-LIBS ?=-lgsl -lgslcblas -lm
+EXTRA_LIBS ?=-lgsl -lgslcblas -lm
 WARNINGS ?= \
 -Wall \
 -Wextra \
@@ -27,14 +27,10 @@ OPENMP_LIB ?= -lgomp
 
 test: test_gsl_odeiv2_anyode test_gsl_odeiv2_anyode_parallel test_gsl_odeiv2_anyode_autorestart test_gsl_odeiv2_cxx _test_gsl_odeiv2_anyode.py
 	./test_gsl_odeiv2_anyode --abortx 1
-ifeq ($(CXX),clang++-6.0)
-	@echo "skipping openmp when using clang"
-else
 	./test_gsl_odeiv2_anyode_parallel --abortx 1
-endif
 	./test_gsl_odeiv2_anyode_autorestart --abortx 1
 	./test_gsl_odeiv2_cxx --abortx 1
-	python3 ./_test_gsl_odeiv2_anyode.py
+	env DISTUTILS_DEBUG=1 CC=$(CXX) CFLAGS="$(EXTRA_FLAGS)" LDFLAGS="$(LDFLAGS)" LD_PRELOAD="$(PY_LD_PRELOAD)" ASAN_OPTIONS=detect_leaks=0 python3 ./_test_gsl_odeiv2_anyode.py
 
 clean:
 	rm -f doctest.h
@@ -45,15 +41,10 @@ clean:
 
 
 test_%: test_%.cpp ../pygslodeiv2/include/gsl_odeiv2_cxx.hpp doctest.h testing_utils.hpp
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -o $@ $< $(LIBS)
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) $(INCLUDE) -o $@ $< $(LDLIBS) $(EXTRA_LIBS)
 
 test_gsl_odeiv2_anyode_parallel: test_gsl_odeiv2_anyode_parallel.cpp ../pygslodeiv2/include/gsl_odeiv2_*.hpp
-ifeq ($(CXX),clang++-6.0)
-	@echo "skipping openmp when using clang"
-	touch $@
-else
-	$(CXX) $(CXXFLAGS) $(OPENMP_FLAG) $(INCLUDE) -o $@ $< $(LIBS) $(OPENMP_LIB)
-endif
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) $(OPENMP_FLAG) $(INCLUDE) -o $@ $< $(LDLIBS) $(EXTRA_LIBS) $(OPENMP_LIB)
 
 doctest.h: doctest.h.bz2
 	bunzip2 -k -f $<
